--- a/golos client/package.json
+++ b/golos client/package.json
@@ -20,7 +20,9 @@
     "react-bootstrap": "^2.10.1",
     "react-datepicker": "^6.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.2",
+    "react-router-dom": "^6.22.3",
+    "react-select": "^5.8.0",
+    "react-transition-group": "^4.4.5",
     "router": "^1.3.8",
     "router-dom": "^2.2.11",
     "styled-components": "^6.1.8",
